--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pop Up</title>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
+  <div class="container">
+    <div class="card">
+      <img src="./images/check.png">
+      <h2>Thank You</h2>
+      <p>Form Submitted successfully!</p>
+      <button class="btn">OK</button>
+    </div>
+    <button class="btn">Submit</button>
+  </div>
 
+  <script src="./scripts.js"></script>
 </body>
 
 </html>
