--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="card">
       <img src="./images/check.png">
       <h2>Thank You</h2>
-      <p>Form Submitted successfully!</p>
+      <p>Your data Submitted successfully!</p>
       <button class="btn">OK</button>
     </div>
     <button class="btn">Submit</button>
