neccessary javascript and css for the popup

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
 <body>
   <div class="container">
-    <div class="card">
+
+    <div class="card js-card">
       <img src="./images/check.png">
       <h2>Thank You</h2>
       <p>Your data Submitted successfully!</p>
-      <button class="btn">OK</button>
+      <button class="btn js-ok-button">OK</button>
     </div>
-    <button class="btn">Submit</button>
+    <button class="btn js-popup-btn">Submit</button>
   </div>
 
   <script src="./scripts.js"></script>
